# zkvm_benchmarking_project

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.risc0  Dockerfile.sp1  LICENSE  Makefile  README.md  built_docker_environments.sh  log_cleaner.sh  run_in_docker.sh  run_in_valida.sh  run_risc0_sample_test_in_docker.sh  run_sp1_sample_test_in_docker.sh
benchmarker/: Cargo.toml
benchmarker/src/: benchmarker.rs
docs/: data.json  index.html  readme  text_to_json.py
docs/images/: stoic_man
results/: risc0_RSA_benchmark_results  risc0_SHA-2-1024_benchmark_results  risc0_SHA-2-256_benchmark_results  risc0_fibonacci1000_benchmark_results  risc0_fibonacci100_benchmark_results  risc0_fibonacci10_benchmark_results  risc0_groth16_benchmark_results  risc0_isprime_benchmark_results  risc0_mergeSort_benchmark_results  risc0_quickSort_benchmark_results  risc0_vecSum1000_benchmark_results  risc0_vecSum100_benchmark_results  risc0_vecSum10_benchmark_results  sp1_RSA_benchmark_results  sp1_SHA-2-1024_benchmark_results  sp1_SHA-2-256_benchmark_results  sp1_fibonacci1000_benchmark_results  sp1_fibonacci100_benchmark_results  sp1_fibonacci10_benchmark_results  sp1_groth16_benchmark_results  sp1_isprime_benchmark_results  sp1_mergeSort_benchmark_results  sp1_quickSort_benchmark_results  sp1_vecSum1000_benchmark_results  sp1_vecSum100_benchmark_results  sp1_vecSum10_benchmark_results
risc0_benchmarks/test_project/: Cargo.toml  profile.pb
risc0_benchmarks/test_project/host/: Cargo.toml
risc0_benchmarks/test_project/host/src/: main.rs  rsa.rs
risc0_benchmarks/test_project/methods/: Cargo.toml
risc0_benchmarks/test_project/methods/guest/: Cargo.toml
risc0_benchmarks/test_project/methods/guest/src/: main.rs  main_,merge_sort.rs  main_fibonacci.rs  main_sha2.rs
sp1_benchmarks/sp1_project/program/: Cargo.toml
sp1_benchmarks/sp1_project/program/src/: main.rs  vec_sum10.rs  vec_sum100.rs  vec_sum10000.rs
sp1_benchmarks/sp1_project/script/: Cargo.toml
tests/: Cargo.toml  host_test.rs  output_risc0.rs
website/: data.json  text_to_json.py  website.html
(+18 files in other folders)
