[dependencies]
bincode = "1.3"
rsa = "0.6"
serde = "1.0"
sysinfo = "0.21.0"

[dependencies.benchmarker]
path = "../../../benchmarker"

[dependencies.methods]
path = "../methods"

[dependencies.risc0-zkvm]
version = "1.2"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3"

[package]
edition = "2021"
name = "host"
version = "0.1.0"
