[dependencies]
nalgebra = "0.33.0"
rsa = "0.9.6"
sp1-zkvm = "3.0.0-rc4"

[dependencies.alloy-sol-types]
workspace = true

[dependencies.fibonacci-lib]
path = "../lib"

[dependencies.sha2]
features = ["oid"]
package = "sha2"
version = "0.10.8"

[package]
edition = "2021"
name = "fibonacci-program"
version = "0.1.0"
