[[bin]]
name = "fibonacci"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[build-dependencies]
sp1-helper = "3.0.0"

[dependencies]
bincode = "1.3"
hex = "0.4.3"
rsa = "0.6"
sp1-sdk = "3.0.0"
sysinfo = "0.21.0"
tracing = "0.1.40"

[dependencies.alloy-sol-types]
workspace = true

[dependencies.benchmarker]
path = "../../../benchmarker"

[dependencies.clap]
features = ["derive", "env"]
version = "4.0"

[dependencies.fibonacci-lib]
path = "../lib"

[dependencies.serde]
default-features = false
features = ["derive"]
version = "1.0.200"

[dependencies.serde_json]
default-features = false
features = ["alloc"]
version = "1.0"

[package]
default-run = "fibonacci"
edition = "2021"
name = "fibonacci-script"
version = "0.1.0"
